# OpenTwin

./: .gitignore  LICENSE.md  README.md  Release Notes.txt
Framework/OpenTwin/: .gitignore  Cargo.toml  EditInVsCode.bat  README.md  build.bat  requests.http
Framework/OpenTwin/src/: handler.rs  main.rs  model.rs  mtls_config.rs  serve_mtls.rs  service.rs
Libraries/BlockEntities/: BlockEntities.sln  BlockEntities.vcxproj  BlockEntities.vcxproj.filters  CMakeLists.txt  build.bat  clean.bat  edit.bat
Libraries/BlockEntities/BlockEntitiesTest/: BlockEntitiesTest.vcxproj  BlockEntitiesTest.vcxproj.filters
Libraries/BlockEntities/include/: BlockConnection.h  BlockConnectionBSON.h  BlockEntitiesAPIExport.h  BlockImageNames.h  CircuitElement.h  ClassFactoryBlock.h  ConfigurationHelper.h  Connector.h  EntityBlock.h  EntityBlockCircuitCapacitor.h  EntityBlockCircuitConnector.h  EntityBlockCircuitCurrentMeter.h  EntityBlockCircuitDiode.h  EntityBlockCircuitElement.h  EntityBlockCircuitGND.h  EntityBlockCircuitInductor.h  EntityBlockCircuitResistor.h  EntityBlockCircuitTransmissionLine.h  EntityBlockCircuitVoltageMeter.h  EntityBlockCircuitVoltageSource.h  EntityBlockConnection.h  EntityBlockDataDimensionReducer.h  EntityBlockDatabaseAccess.h  EntityBlockDecoLabel.h  EntityBlockDecoration.h  EntityBlockDisplay.h  EntityBlockFileWriter.h  EntityBlockHierarchicalContainerItem.h  EntityBlockHierarchicalDocumentItem.h  EntityBlockHierarchicalProjectItem.h  EntityBlockImage.h  EntityBlockPlot1D.h  EntityBlockPython.h  EntityBlockStorage.h  Helper.h  PythonHeaderInterpreter.h  SharedResources.h  ValueComparisionDefinition.h
Libraries/BlockEntities/src/: BlockConnection.cpp  BlockConnectionBSON.cpp  CircuitElement.cpp  ClassFactoryBlock.cpp  Connector.cpp  EntityBlock.cpp  EntityBlockCircuitCapacitor.cpp  EntityBlockCircuitConnector.cpp  EntityBlockCircuitCurrentMeter.cpp  EntityBlockCircuitDiode.cpp  EntityBlockCircuitElement.cpp  EntityBlockCircuitGND.cpp  EntityBlockCircuitInductor.cpp  EntityBlockCircuitResistor.cpp  EntityBlockCircuitTransmissionLine.cpp  EntityBlockCircuitVoltageMeter.cpp  EntityBlockCircuitVoltageSource.cpp  EntityBlockConnection.cpp  EntityBlockDataDimensionReducer.cpp  EntityBlockDatabaseAccess.cpp  EntityBlockDatabaseAccess1.cpp  EntityBlockDecoLabel.cpp  EntityBlockDecoration.cpp  EntityBlockDisplay.cpp  EntityBlockFileWriter.cpp  EntityBlockHierarchicalContainerItem.cpp  EntityBlockHierarchicalDocumentItem.cpp  EntityBlockHierarchicalProjectItem.cpp  EntityBlockImage.cpp  EntityBlockPlot1D.cpp  EntityBlockPython.cpp  EntityBlockStorage.cpp  Helper.cpp  PythonHeaderInterpreter.cpp
Libraries/BlockEntities/tests/: CMakeLists.txt
Libraries/CADModelEntities/: .gitignore  CADModelEntities.sln  CADModelEntities.vcxproj  CADModelEntities.vcxproj.filters  CMakeLists.txt  build.bat  clean.bat  edit.bat  test.bat
Libraries/CADModelEntities/CADModelEntitiesTest/: CADModelEntitiesTest.vcxproj  CADModelEntitiesTest.vcxproj.filters
Libraries/CADModelEntities/include/: CheckGeometry.h  ClassFactoryCAD.h  EntityBrep.h  EntityFaceAnnotation.h  EntityGeometry.h  GeometryOperations.h
Libraries/CADModelEntities/src/: CheckGeometry.cpp  ClassFactoryCAD.cpp  EntityBrep.cpp  EntityFaceAnnotation.cpp  EntityGeometry.cpp  GeometryOperations.cpp
Libraries/CADModelEntities/tests/: CMakeLists.txt
Libraries/DataStorage/: CMakeLists.txt  CMakePresets.json  DataStorage.sln  DataStorage.vcxproj  DataStorage.vcxproj.filters  build.bat  clean.bat  edit.bat  test.bat
Libraries/DataStorage/DataStorageTest/: .gitignore  DataStorageTest.vcxproj  DataStorageTest.vcxproj.filters
Libraries/ModelEntities/: .gitignore  CMakeLists.txt  ModelEntities.sln  ModelEntities.vcxproj  ModelEntities.vcxproj.filters  build.bat  clean.bat  edit.bat  editForTests.bat  edit_test.bat  test.bat
Libraries/OTCommunication/: .gitignore  CMakeLists.txt  OTCommunication.sln  OTCommunication.vcxproj  OTCommunication.vcxproj.filters  build.bat  clean.bat  edit.bat  test.bat
Libraries/OTCore/: .gitignore  CMakeLists.txt  CMakePresets.json  OTCore.sln  OTCore.vcxproj  OTCore.vcxproj.filters  build.bat  clean.bat  edit.bat  test.bat
Libraries/OTCore/src/: Color.cpp  (+123 more)
Libraries/OTGui/: .gitignore  CMakeLists.txt  GraphicsHBoxLayoutItemCfg.cpp  OTGui.sln  OTGui.vcxproj  OTGui.vcxproj.filters  build.bat  clean.bat  edit.bat  test.bat
Libraries/OTGuiAPI/: CMakeLists.txt  OTGuiAPI.sln  OTGuiAPI.vcxproj  OTGuiAPI.vcxproj.filters  build.bat  clean.bat  edit.bat  test.bat
Libraries/OTModelAPI/: CMakeLists.txt  OTModelAPI.sln  OTModelAPI.vcxproj  OTModelAPI.vcxproj.filters  build.bat  clean.bat  edit.bat  test.bat
Libraries/OTModelEntities/: CMakeLists.txt  build.bat  edit.bat
Libraries/OTRandom/: CMakeLists.txt  CMakePresets.json  OTRandom.sln  OTRandom.vcxproj  OTRandom.vcxproj.filters  build.bat  clean.bat  edit.bat  test.bat
Libraries/OTResultDataAccess/: .gitignore  CMakeLists.txt  clean.bat  edit.bat
Libraries/OTRubberband/: CMakeLists.txt  clean.bat  edit.bat  test.bat
Libraries/OTServiceFoundation/: CMakeLists.txt  OTServiceFoundation.sln  OTServiceFoundation.vcxproj  OTServiceFoundation.vcxproj.filters  build.bat  clean.bat  edit.bat  test.bat
Libraries/OTSystem/: .gitignore  CMakeLists.txt  CMakePresets.json  OTSystem.sln  OTSystem.vcxproj  OTSystem.vcxproj.filters  build.bat  clean.bat  edit.bat  test.bat
Libraries/OTViewer/: .gitignore  CMakeLists.txt  CMakePresets.json  OTViewer.sln  OTViewer.vcxproj  OTViewer.vcxproj.filters  build.bat  clean.bat  edit.bat  test.bat
Libraries/OTWidgets/: .gitignore  CMakeLists.txt  CMakePresets.json  OTWidgets.sln  OTWidgets.vcxproj  OTWidgets.vcxproj.filters  build.bat  clean.bat  edit.bat  test.bat
Libraries/ResultDataAccess/: CMakeLists.txt  ResultDataAccess.sln  ResultDataAccess.vcxproj  ResultDataAccess.vcxproj.filters  build.bat  clean.bat  edit.bat  test.bat
Libraries/RubberbandEngineCore/: CMakeLists.txt  RubberbandEngineCore.sln  RubberbandEngineCore.vcxproj  RubberbandEngineCore.vcxproj.filters  build.bat  clean.bat  edit.bat  test.bat
(+37550 files in other folders)
