[package]
name = "open_twin"
version = "1.0.0"
authors = ["vikramjeetsingh49 <vikramjeetsingh49@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
console = []

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.2.2"
warp = { version = "0.3.6"}
env_logger =  { version = "0.11.3", default-features = false, features = ["humantime", "regex"] }
log = "0.4.21"
libc = "0.2.112"
libloading = "0.5.2"
hashbrown = "0.14.3"
state = { version = "0.4.2", features = ["tls"] }
indexmap = "2.2.5"

# mtls related dependencies

futures = "0.3.30"
x509-parser = "0.11.0"
hyper = { version =  "0.14.12", features = ["full"]}
hyper-rustls = "0.22.1"
rustls = "0.19.1"
tokio-rustls = "0.22.0"



